text overflow white back issue floating shadow fixed

--- a/css/about.css
+++ b/css/about.css
@@ -26,6 +26,15 @@
     position: relative;
     border: #141414 1px solid;
     box-sizing: border-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
 }
 @media screen and (max-width: 1080px){
 	.about-client{
@@ -62,13 +71,6 @@
 .about-client-logo{
 	background-position: center;
 	background-repeat: no-repeat;
-}
-@media screen and (max-width: 720px){
-	.about-client-logo{
-		-webkit-transform: scale(.7);
-		-moz-transform: scale(.7);
-		transform: scale(.7);
-	}  
 }
 @media screen and (max-width: 400px){
 	.about-client-logo{
